--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </form>
             </div>
             <div class="card-footer text-center">
-                <small>COVID 19 - Stay Inside Stay Safe</small>
+                <small>COVID 19 - Stay Inside Stay Safe</small><br>
                 <small>&#169; Samay Jain</small>
             </div>
         </div>
